maze.lessons.maze.island.IslandMaze.scala.error
Escaper:21: error: ';' expected but ')' found.
		else if(!estFaceMur()) && getDirection()==Direction.NORTH)
                                                                         ^